LiE/ansi.h

object power(object a, bigint* b, object unit, f2object f);
char* grp2str(group* grp);
object int_eq_grp_grp(object g,object h); /* used in decomp */