lie.pyx


    # /* Group operations */
    void check_wt(vector* lam, index r)
    void check_wts(matrix* m, index r)
    void check_rt(vector* rt, index s)
    void check_rts(matrix* m, index s)
    void check_toral(vector* t, index r, index lim)
    void check_torals(matrix* m, index r)
    void check_Ww(vector* ww, index s)
    void check_Wws(matrix* m, index s)
    lieobj grp_mul_grp_grp(lieobj g1, lieobj g2)
    lieobj grp_select_grp_int(lieobj g, entry n)
    lieobj vec_sort_vec(lieobj v)
    lieobj mat_sort_mat(matrix* m)
    lieobj mat_unique_mat(matrix* m)
    lieobj mat_blockmat_mat_mat(matrix* a,matrix* b)
    lieobj vid_setdefault_grp(lieobj g)
    lieobj vid_setdefault()
    lieobj grp_setdefault()
    lieobj mat_center_grp(lieobj g)
    lieobj int_dim_grp(lieobj g)
    lieobj vid_diagram_grp(lieobj g)
    lieobj vec_liecode_grp(lieobj g)
    lieobj groupmake(char lietype,index rank)
    lieobj grp_liegroup_int_int(entry typ, entry rank)
    # /*lieobj int_ncomp_grp(group* g)*/
    lieobj int_lierank_grp(lieobj g)
    lieobj int_cartan_vec_vec_grp(vector* v, vector* w, lieobj g)
    lieobj mat_cartan_grp(lieobj g)
    lieobj grp_carttype_mat_grp(matrix* m, lieobj g)
    lieobj mat_centroots_vec_grp(vector* t, lieobj g)
    lieobj mat_centroots_mat_grp(matrix* m, lieobj g)
    lieobj grp_centrtype_vec_grp(vector* t, lieobj g)
    lieobj grp_centrtype_mat_grp(matrix* m, lieobj g)
    lieobj mat_closure_mat_grp(matrix* m, lieobj g) # from box/static3.c
    lieobj int_detcart_grp(lieobj g)
    lieobj mat_domweights_vec_grp(vector* v, lieobj g)
    lieobj mat_fundam_mat_grp(matrix* m, lieobj g) # from box/static3.c
    lieobj vec_highroot_grp(lieobj grp)
    lieobj mat_icartan_grp(lieobj g)
    lieobj int_inprod_vec_vec_grp(vector* v, vector* w, lieobj g)
    lieobj int_norm_vec_grp(vector* root, lieobj g)
    lieobj int_numproots_grp(lieobj g)
    lieobj mat_posroots_grp(lieobj g)
    lieobj mat_bhdesc_vec_grp(vector* w, lieobj g)
    lieobj mat_bhdesc_vec_vec_grp(vector* v, vector* w, lieobj g)
    lieobj int_bhleq_vec_vec_grp(vector* v, vector* w, lieobj g)
    lieobj vec_canonical_vec_grp(vector* v, lieobj g)
    lieobj mat_canonical_mat_grp(matrix* m, lieobj g)
    lieobj vec_dominant_vec_grp(vector* v, lieobj g)
    lieobj mat_dominant_mat_grp(matrix* m, lieobj g)
    lieobj pol_dominant_pol_grp(poly* p, lieobj g)
    lieobj vec_exponents_grp(lieobj g)
    lieobj mat_filterdom_mat (matrix* m, lieobj g)
    lieobj pol_filterdom_pol (poly* p, lieobj g)
    lieobj pol_klpoly_vec_vec_grp(vector* x, vector* y, lieobj g)
    lieobj int_length_vec_grp(vector* v, lieobj g)
    lieobj vec_longword_grp(lieobj g)
    lieobj vec_lreduce_vec_vec_grp(vector* L,vector* ww,lieobj g)
    # /*lieobj vec_lrreduce_vec_vec_vec_grp(L,ww,R,g) ???? */
    lieobj mat_orbit_int_vec_mat(entry i, vector* v, matrix* m)
    lieobj mat_orbit_vec_mat(vector* v, matrix* m)
    lieobj vec_reduce_vec_grp(vector* ww, lieobj g)
    lieobj mat_reflection_vec_grp(vector* rt, lieobj g)
    lieobj vec_rreduce_vec_vec_grp(vector* ww, vector* R, lieobj g)
    lieobj pol_rpoly_vec_vec_grp(vector* x, vector* y, lieobj g)
    lieobj vec_waction_vec_vec_grp(vector* v, vector* word, lieobj g)
    lieobj mat_waction_vec_grp(vector* word, lieobj g)
    lieobj mat_waction_mat_vec_grp(matrix* m, vector* word, lieobj g)
    lieobj pol_waction_pol_vec_grp(poly* p, vector* word, lieobj g)
    lieobj mat_worbit_vec_grp(vector* v, lieobj g)
    lieobj mat_worbitgraph_vec_grp(vector* v, lieobj g)
    lieobj pol_worbit_pol_grp(poly* p, lieobj g)
    lieobj bin_worbitsize_vec_grp(vector* v, lieobj g)
    lieobj bin_worder_grp(lieobj g)
    lieobj bin_worder_vec_grp(lieobj I, lieobj g)
    lieobj vec_wrtaction_vec_vec_grp(vector* v, vector* word, lieobj g)
    lieobj mat_wrtaction_vec_grp(vector* word, lieobj g)
    lieobj mat_wrtaction_mat_vec_grp(matrix* m, vector* word, lieobj g)
    lieobj mat_wrtorbit_vec_grp(vector* v, lieobj g)
    lieobj vec_wword_vec_grp(vector* w, lieobj g)
    lieobj vec_wword_mat_grp(matrix* m, lieobj g)
    lieobj bin_classord_vec(vector* lam)
    lieobj vec_frompart_vec(vector* lam)
    lieobj mat_frompart_mat(matrix* m)
    lieobj pol_frompart_pol(poly* p)
    lieobj vec_nextpart_vec(vector* v)
    lieobj vec_nextperm_vec(vector* v)
    lieobj vec_nexttab_vec(vector* t)
    lieobj bin_ntabl_vec(vector* lam)
    lieobj mat_partitions_int(entry p)
    lieobj vid_prtab_vec(vector* v)
    lieobj vec_RS_vec_vec(vector* P, vector* Q)
    lieobj mat_RS_vec(vector* W)
    lieobj int_signpart_vec(vector* v)
    lieobj vec_shape_vec(vector* v)
    lieobj bin_symchar_vec_vec(vector* a, vector* b)
    lieobj poly_symchar_vec(vector* a)
    lieobj mat_symorbit_vec(vector* v)
    lieobj mat_tableaux_vec(vector* lam)
    lieobj vec_topart_vec(vector* v)
    lieobj mat_topart_mat(matrix* m)
    lieobj pol_topart_pol(poly* p)
    lieobj vec_transpart_vec(vector* v)
    lieobj pol_adams_int_vec_grp(entry d, vector* v, lieobj g)
    lieobj pol_adams_int_pol_grp(entry d, poly* p, lieobj g)
    lieobj pol_adjoint_grp(lieobj g)
    lieobj pol_altdom_pol_grp(poly* p, lieobj g)
    lieobj pol_altdom_vec_grp(vector* v, lieobj g)
    lieobj pol_altdom_pol_vec_grp(poly* p, vector* w, lieobj g)
    lieobj pol_altdom_vec_vec_grp(vector* v, vector* w, lieobj g)
    lieobj pol_alttensor_int_pol_grp(entry d, poly* p, lieobj g)
    lieobj pol_alttensor_int_vec_grp(entry d, vector* v, lieobj g)
    lieobj pol_altwsum_pol_grp(poly* p, lieobj g)
    lieobj pol_altwsum_vec_grp(vector* v, lieobj g)
    lieobj pol_branch_vec_grp_mat_grp(vector *v, lieobj h, lieobj m, lieobj g)
    lieobj pol_branch_pol_grp_mat_grp(poly *p, lieobj h, lieobj m, lieobj g)
    lieobj pol_collect_pol_grp_mat_grp(poly* p, matrix* m, lieobj h, lieobj g)
    # /*lieobj pol_collect_pol_grp_mat_int_grp()*/
    lieobj vec_contragr_vec_grp(vector* v, lieobj g)
    lieobj pol_contragr_pol_grp(poly* p, lieobj g)
    lieobj pol_decomp_pol_grp(poly* p, lieobj g)
    lieobj pol_Demazure_pol_vec_grp(poly* p, vector* w, lieobj g)
    lieobj pol_Demazure_vec_vec_grp(vector* v, vector* w, lieobj g)
    lieobj pol_Demazure_pol_grp(poly* p, lieobj g)
    lieobj pol_Demazure_vec_grp(vector* v, lieobj g)
    lieobj bin_dim_vec_grp(vector* v, lieobj g)
    lieobj bin_dim_pol_grp(poly* p, lieobj g)
    lieobj pol_domchar_vec_grp(vector* v, lieobj g)
    lieobj pol_domchar_pol_grp(poly* p, lieobj g)
    lieobj bin_domchar_vec_vec_grp(vector* lam, vector* w, lieobj g)
    lieobj bin_domchar_pol_vec_grp(poly* p, vector* w, lieobj g)
    lieobj pol_lrtensor_vec_vec(vector* lam, vector* mu)
    lieobj pol_lrtensor_pol_pol(poly* p, poly* q)
    lieobj pol_plethysm_vec_pol_grp(vector* lam, poly* p, lieobj g)
    lieobj pol_plethysm_vec_vec_grp(vector* lam,vector* mu,lieobj g)
    lieobj pol_ptensor_int_pol_grp(entry d, poly* p, lieobj g)
    lieobj pol_ptensor_int_vec_grp(entry d, vector* v, lieobj g)
    lieobj mat_resmat_mat_grp(matrix* m, lieobj g)
    lieobj pol_spectrum_vec_vec_grp (vector* wt, vector* t, lieobj g)
    lieobj pol_spectrum_pol_vec_grp (poly* p, vector* t, lieobj g)
    lieobj pol_symtensor_int_pol_grp(entry d, poly* p, lieobj g)
    lieobj pol_symtensor_int_vec_grp(entry d, vector* v, lieobj g)
    lieobj pol_tensor_pol_pol_grp(poly* p, poly* q, lieobj g)
    lieobj pol_tensor_vec_vec_grp(vector* x, vector* y, lieobj g)
    lieobj bin_tensor_pol_pol_vec_grp(poly* p, poly* q, vector* nu, lieobj g)
    lieobj bin_tensor_vec_vec_vec_grp(vector* x, vector* y, vector* z, lieobj g)
    lieobj pol_vdecomp_pol_grp(poly* p, lieobj g)
    lieobj pol_vdecomp_vec_grp(vector* v, lieobj g)

# utilities

def lcm(a,b): return (a*b)//gcd(a,b)

def denom(x):
    if isinstance(x, Fraction): return x.denominator
    else: return 1

def powermod(x, n, b):
    if n <= 0: raise ValueError(u"Cannot raise object to negative power.")
    elif n == 1: return x % b
    y = power(x, n//2)
    if n % 2 == 1: return x*y*y % b
    else: return y*y % b
    
def power(x, n):
    if n <= 0: raise ValueError(u"Cannot raise object to negative power.")
    elif n == 1: return x
    y = power(x, n//2)
    if n % 2 == 1: return x*y*y
    else: return y*y

cdef class grp:
    cdef lieobj g

    def __init__(self, val=u"T0", rk=None, *args):
        if isinstance(val, grp):
            self.g = (<grp>val).g
        elif type(val) == type(0) and type(rk) == type(0):
            self.g = grp_liegroup_int_int(<int>val, <int>rk)
        elif val:
            self.g = <lieobj>create_group(pyobj2charptr(val))
        protect(self.g)

    def __dealloc__(self):
        neglect(<lieobj>self.g)
        gc.maybe_run()

    def __str__(self): return repr(self)
    def __repr__(self): return grp2str(<group*> self.g).decode(u"utf-8")
    def __hash__(self): return hash(repr(self))

    def __richcmp__(grp self, grp other, int op):
        if op == 0: return NotImplemented
        elif op == 2: return bool_from_lieobj(int_eq_grp_grp(self.g, other.g))
        elif op == 4: return NotImplemented
        elif op == 1: return NotImplemented
        elif op == 3: return not (self == other)
        elif op == 5: return NotImplemented
        else: raise ValueError(u"Bad op argument to grp.__richcmp__")

    def __len__(self):
        if self.toral_dim() == 0: return (<group*>(self.g)).ncomp
        else: return 1 + (<group*>(self.g)).ncomp

    def __getitem__(grp self, key):
        if isinstance(key, slice):
            i,j,s = key.indices(len(self))
            return reduce(grp.__mul__, [self[k] for k in range(i, j, s)], T0)
        else:
            n = len(self)
            m = 1 if self.toral_dim() == 0 else 0
            i,_,_ = slice(key, None).indices(n)
            if abs(i) >= n: raise IndexError(u"grp index out of range")
            return grp_from_lieobj(grp_select_grp_int(self.g, (i+1) % (n+m)))
    def to_list(self): return [self[i] for i in range(len(self))]
    def __iter__(self): return iter(self.to_list())

    def __mul__(grp self, grp other):
        return grp_from_lieobj(grp_mul_grp_grp(self.g, other.g))
    def __pow__(self, n, b):
        if b: return powermod(self, n, b)
        else: return power(self, n)
